--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
-	"name": "aprnt.modapp.boilerplate",
-	"version": "1.0.0.0",
+	"name": "modapp-boilerplate",
+	"version": "1.0.0",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/novagen/modapp-boilerplate"
+	},
+	"author": "Christofer Engel <christofer.engel@gmail.com>",
+	"homepage": "https://github.com/novagen/modapp-boilerplate",
 	"license": "MIT",
 	"scripts": {
 		"start": "node server.js"
@@ -13,8 +19,7 @@
 		"modapp-resource-component": "^1.0.1",
 		"modapp-utils": "^1.0.1",
 		"nats": "^0.7.24",
-		"resclient": "^1.0.2",
-		"roboto-fontface": "^0.9.0"
+		"resclient": "^1.0.2"
 	},
 	"devDependencies": {
 		"babel-core": "^6.26.0",
@@ -23,12 +28,10 @@
 		"css-loader": "^0.28.7",
 		"eslint": "^4.10.0",
 		"eslint-loader": "^1.9.0",
-		"favicons-webpack-plugin": "^0.0.7",
 		"file-loader": "^1.1.10",
 		"html-webpack-plugin": "^2.30.1",
 		"node-sass": "^4.6.0",
 		"sass-loader": "^6.0.6",
-		"sass-material-colors": "^0.0.5",
 		"style-loader": "^0.19.0",
 		"webpack": "^3.8.1",
 		"webpack-dev-middleware": "^1.12.0"
