--- a/package.json
+++ b/package.json
@@ -9,32 +9,33 @@
 	"homepage": "https://github.com/novagen/modapp-boilerplate",
 	"license": "MIT",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"eslint": "eslint ./"
 	},
 	"dependencies": {
-		"express": "^4.16.2",
-		"modapp-base-component": "^1.0.2",
-		"modapp-l10n": "^1.0.2",
-		"modapp-resource": "^1.0.2",
-		"modapp-resource-component": "^1.0.1",
+		"express": "^4.16.3",
+		"modapp": "^2.3.3",
+		"modapp-base-component": "^1.3.0",
+		"modapp-l10n": "^1.3.0",
+		"modapp-resource": "^1.2.2",
+		"modapp-resource-component": "^1.4.1",
 		"modapp-router": "^1.0.0",
-		"modapp-utils": "^1.0.1",
-		"nats": "^0.7.24",
-		"resclient": "^1.0.2"
+		"modapp-utils": "^1.2.1",
+		"nats": "^1.0.1",
+		"node-sass": "^4.9.4",
+		"resclient": "^2.0.2",
+		"sass-loader": "^7.1.0"
 	},
 	"devDependencies": {
 		"babel-core": "^6.26.0",
-		"babel-loader": "^7.1.2",
+		"babel-loader": "^7.1.4",
 		"babel-preset-env": "^1.6.1",
-		"css-loader": "^0.28.7",
-		"eslint": "^4.10.0",
-		"eslint-loader": "^1.9.0",
-		"file-loader": "^1.1.10",
+		"css-loader": "^0.28.11",
+		"eslint": "^4.19.1",
+		"eslint-loader": "^2.0.0",
 		"html-webpack-plugin": "^2.30.1",
-		"node-sass": "^4.6.0",
-		"sass-loader": "^6.0.6",
-		"style-loader": "^0.19.0",
-		"webpack": "^3.8.1",
-		"webpack-dev-middleware": "^1.12.0"
+		"style-loader": "^0.20.3",
+		"webpack": "^3.11.0",
+		"webpack-dev-middleware": "^1.12.2"
 	}
 }
