--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
 		"sass-loader": "^7.1.0"
 	},
 	"devDependencies": {
-		"babel-core": "^6.26.0",
-		"babel-loader": "^7.1.4",
-		"babel-preset-env": "^1.6.1",
-		"css-loader": "^0.28.11",
-		"eslint": "^4.19.1",
+		"@babel/core": "^7.2.2",
+		"@babel/preset-env": "^7.2.0",
+		"babel-loader": "^8.0.4",
+		"css-loader": "^2.0.1",
+		"eslint": "^5.10.0",
 		"eslint-loader": "^2.0.0",
-		"html-webpack-plugin": "^2.30.1",
-		"style-loader": "^0.20.3",
-		"webpack": "^3.11.0",
-		"webpack-dev-middleware": "^1.12.2"
+		"html-webpack-plugin": "^3.2.0",
+		"style-loader": "^0.23.1",
+		"webpack": "^4.27.1",
+		"webpack-dev-middleware": "^3.4.0"
 	}
 }
